# OptionPricer

./: .gitignore  CMakeLists.txt  OptionPricingTool  README.md  greek_calculations.cpp  greek_calculations.h  main.cpp  math_utils.h  option_pricer  option_pricing.cpp  option_pricing.h  option_pricing_gui.cpp  option_pricing_gui.h  pricing_exceptions.h  types.h  user_interface.cpp  user_interface.h
src/: main.cpp
src/core/: greek_calculations.cpp  option_pricing.cpp  option_pricing.h  pricing_exceptions.h
src/gui/: options_gui.cpp  options_gui.h
